--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "import:stock": "tsx scripts/import-stock.ts",
+    "import:invoice": "tsx scripts/import-invoice.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
@@ -18,6 +20,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.7",
+    "xlsx": "^0.18.5",
     "lucide-react": "^0.555.0",
     "next": "16.0.5",
     "pg": "^8.16.3",
@@ -37,6 +40,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.0.5",
     "tailwindcss": "^4",
+    "tsx": "^4.19.2",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
