--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "drizzle-orm": "^0.44.7",
     "geist": "^1.5.1",
     "lucide-react": "^0.555.0",
-    "next": "16.0.5",
+    "next": "^16.0.7",
     "pg": "^8.16.3",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-hook-form": "^7.67.0",
     "tailwind-merge": "^3.4.0",
     "xlsx": "^0.18.5",
@@ -43,7 +43,7 @@
     "baseline-browser-mapping": "^2.9.4",
     "drizzle-kit": "^0.31.7",
     "eslint": "^9",
-    "eslint-config-next": "16.0.5",
+    "eslint-config-next": "^16.0.7",
     "tailwindcss": "^4",
     "tsx": "^4.19.2",
     "tw-animate-css": "^1.4.0",
